[wa-1] add lombok, actualize and polish existing code;